--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-<div style="font-size:36px">김강희 </div>
+<div style="font-size:36px">김강희 홈페이지 </div>
 
 <img aria-hidden="true" class="h-A-Ce-ze-Yf A-Ce-ze-Yf" src="https://lh3.googleusercontent.com/b5UZdtqYddYTk_mXA5YPH9lExqDL9mqZHcywBLjlsNTJdr4SHiIlevtJC2Mj_Wwxxp2U6pimJlMfgJcj3XENZCPa=w640-h400-e365-rj-sc0x00ffffff" width="640px" height="400px" style="opacity: 1;">
 
